recursion.lessons.recursion.polygonfractal.PolygonFractal.scala.error
PolygonFractal:10: error: not found: value plygonFractal
		plygonFractal(levels-1, sides,length*shrink,skrink)
                ^